--- a/2daPreentrega/src/components/Item/Item.css
+++ b/2daPreentrega/src/components/Item/Item.css
@@ -14,5 +14,6 @@ h2{
     font-size: 15px;
     text-decoration: none;
     color: rgb(22, 20, 20);
-    
+    color: rgb(8, 87, 133);
+    text-shadow: 2px 2px 4px #000000;
 }
