--- a/2daPreentrega/src/components/NavBar/NavBar.css
+++ b/2daPreentrega/src/components/NavBar/NavBar.css
@@ -15,6 +15,8 @@
     text-decoration: none; 
     color: #333; 
     font-weight: bold; 
+    color: rgb(8, 87, 133);
+    text-shadow: 2px 2px 4px #000000;
   }
 
 .active{
@@ -25,4 +27,5 @@
     padding: 20px;
     width: 100px;
     height: 100px;
-}
+    
+   }
